static/css/companies.css
/* Variables */
:root{
    --cerise: #e83d84;
    --cerise-light: #ec5f99; /*rgba(232,19,108,0.8);*/
}

#logos div img {
    height: 7rem;
}

#logos div a {
    font-size: 2rem;
}

#logos div {
    display: flex;
    padding: 3%;
    flex-direction: column;
    align-items: center;
    /* justify-content: space-between; */
}

#flex-boxes {
    display: flex;
    justify-content: space-between;
    padding: 0;
    margin-top: 20px;
}

#logos {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;
}

.flex-box {
    float: left;
    width: 380px;
    background-color: white;
    overflow: hidden;
    color: #6a6a6a;
    padding: 30px;
    height: 600px;
    border-radius: 15px;
    margin-bottom: 20px;
}

.flex-box h1 {
    margin-top: 0;
    margin-bottom: 20px;
}

.flex-box .head {
    font-size: 2em;
    font-weight: 200;
}

.flex-box .button {
    background-color: var(--cerise);
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
}

.flex-box a {
    text-decoration: none !important;
}

/* For devices narrower than 1200px */
@media (max-width: 1200px) {
    #flex-boxes {
        display: block;
        margin: 20px 5% 0;
    }

    .flex-box {
        width: auto;
        height: auto;
        padding: 5%;
    }

    #logos {
        grid-template-columns: 1fr;
    }
}

